# computational_graphics_2019

./: .gitmodules  readme.md
ppt/: 计算机图形学-第一次习题课.pptx
rasterization/: main.cpp  makefile  pic.h  report.md
ray_tracer/: .gitignore  Cargo.toml  readme.md
ray_tracer/report/: report.md
ray_tracer/report_src/: aperture.cu  aperture_dragon.cpp  collapse_pyramid.txt  dispersion.cu  fog_dragon.cpp  gather.cpp  gen_aperture.py  gen_pyramid.py  glass.cpp  pyramid.txt  pyramid_video.txt  ray_tracer.cpp  rgb.cpp  rgb_table.cpp  rgb_table.txt  vase.cpp  water.cpp
ray_tracer/resource/: vase.txt  water_drop.txt
ray_tracer/src/: bezier.rs  codegen.rs  example.rs  geo.rs  kd_tree.rs  lib.rs  load.rs  mat44.rs  material.rs  mesh.rs  oct_tree.rs  pic.rs  tri_aabb.rs  util.rs  vec.rs  world.rs
ray_tracer/src/physics/: mod.rs
ray_tracer/tmp/: bezier_surface.txt  deploy.sh  kd_tree.rs  modify.cpp  old_model.txt  result.txt  select_px.py  smallpt.cpp  test.sh
ray_tracer/tool/: bezier.cpp  gather.cpp  makefile  physics.h  ppm_util.hpp  raw2ppm.cpp  test_physics.cpp  tracer_util.hpp  water_maker.cpp
seam_carving/: main.cpp  makefile  report.md  select_px.py
seam_carving/cmdline/: cmdline.cpp  cmdline.h
seam_carving/report/: 1.dot  2.dot  3.dot  gen.py
