[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[dependencies]
rayon = "1.0.3"
text_io = "0.1.7"
png = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.0.1"
byteorder = "1"
f128 = "0.2.3"
num-traits = "0.2"

[lib]
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/example.rs"